<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20"
    tools:layout_editor_absoluteY="1dp">


    <Space
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <TextView
        android:id="@+id/hello_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:text="@string/hello"
        android:textColor="#194d63"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:text="@string/login_line"
        android:textColor="#696564"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_weight="2.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="0.09"
        android:gravity="center"
        android:orientation="vertical"
        >
        <Space
            android:layout_width="20dp"
            android:layout_height="10dp"
            />

        <TextView
            android:id="@+id/CNIC_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_weight="5"
            android:paddingStart="10dp"
            android:text="@string/user_name_label"
            android:textColor="#A19C9C"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="5"
            android:contextClickable="true"
            android:importantForAutofill="no"
            android:maxLength="15"
            android:paddingStart="10dp"
            android:textColor="#C6C0C0"
            android:textColorHint="#A19C9C"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <Space
            android:layout_width="20dp"
            android:layout_height="10dp"
            />

    </LinearLayout>


    <Space
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_weight="0.5" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="0.09"

        android:layout_gravity= "center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="#C6C0C0"
            android:textColorHint="#A19C9C" />

        <ImageView
            android:id="@+id/show_hide_password"
            android:layout_width="21dp"
            android:layout_height="23dp"
            android:layout_alignParentEnd="true"

            android:layout_marginTop="20dp"
            android:layout_marginEnd="19dp" />


    </RelativeLayout>


    <Space
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_weight="0.5" />


    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"

        android:layout_weight="0.2"
        android:text="@string/forget_password"

        android:textColor="#696564"
        android:textColorHint="#070707"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />

    <Space
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:layout_weight="0.6"


        android:text="@string/text_login"
        android:textSize="20sp"
        app:backgroundTint="#194d63" />

    <Space
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/dont_have_an_account"
            android:textColor="#d8d8d8"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/sign_up_string"
            android:textColor="#80c6d0"
            android:textSize="17sp" />


    </LinearLayout>


</LinearLayout>